<resources>
    <string name="app_name">Fun Time</string>
    <string name="action_settings">Settings</string>
    <string name="button_game">GAMES</string>
    <string name="button_video">VIDEO</string>
    <string name="title_activity_xo">XO</string>
    <string name="title_activity_beautiful_sentences">BeautifulSentences</string>
    <string name="button_song">SONGS</string>
    <string name="button_sentence">Beautiful Sentences</string>
    <string name="notification_button">Want get beautiful sentence every day</string>
    <string name="title_activity_setting">Setting</string>
    <string name="selectButton">Set notification for this date</string>
    <string name="str">Hello</string>
    <string name="title_activity_notification__setting">Notification_Setting</string>
    <string name="start">Start play!</string>
    <string name="title_activity_video">VIDEO</string>
    <string name="title_activity_songs">Songs</string>
    <string name="wellcom_text">Wellcom</string>
    <string name="opttion">Enjoy your day :)</string>

</resources>
