<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GAMES"
        android:id="@+id/button_game"
        android:src="@drawable/button_xo1"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/button_video"
        android:layout_marginBottom="158dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_video"
        android:id="@+id/button_video"
        android:src="@drawable/button_video"
        android:layout_marginEnd="81dp"
        android:layout_alignTop="@+id/button_game"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_song"
        android:id="@+id/button_song"
        android:src="@drawable/button_song"
        android:layout_below="@+id/button_video"
        android:layout_alignStart="@+id/button_video" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sentence"
        android:id="@+id/button_sentence"
        android:src="@drawable/button"
        android:layout_alignTop="@+id/button_song"
        android:layout_alignStart="@+id/button_game" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wellcom_text"
        android:textSize="55sp"
        android:id="@+id/textView3"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/button_video" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/opttion"
        android:textSize="30sp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />
</RelativeLayout>
